test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Thu, 11 Sep 2025 05:09:02 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="Yt0xaPRdpKNq3R0quiRDS0p4DuBL/j/0", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}